src/objects/ADvendio__Content__c.object
<CustomObject>
    <description>This object is used for implementing the content-structure</description>
    <fields>
        <fullName>ADvendio__AccountPayable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Payable</label>
        <referenceTo>ADvendio__AccountPayable__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the KeyValue Manager and Media Configuration, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Address__c</fullName>
        <description>First Address of the Content Item</description>
        <inlineHelpText>Please enter the address here</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AltAddress__c</fullName>
        <description>Alternative address for localization purposes only.</description>
        <inlineHelpText>Please use this field to enter the address in a second language or different notation.</inlineHelpText>
        <label>Alternative Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ConstantQuantity__c</fullName>
        <description>ConstantQuantity__c must be 1 or ConstantQuantity__c.replace(\&apos; \&apos;,\&apos;_\&apos;)+\&apos;__c\&apos; must be Frequency__c, Guaranteed_AI__c, Quantity__c, or a different valid CI field.</description>
        <label>Constant Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Guaranteed AI</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__GeoLocation__c</fullName>
        <description>Please enter the geo-location coordinates here</description>
        <inlineHelpText>Please enter the geo-location coordinates here</inlineHelpText>
        <label>Geo Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicabilityUnit__c</fullName>
        <description>This field defines for which Time Column the Content is displayed in the Booking Calendar.</description>
        <inlineHelpText>This field is used to define if the Maximum Applicability should be used for days, weeks or months.</inlineHelpText>
        <label>Maximum Applicability Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicability__c</fullName>
        <label>Maximum Applicability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParentContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>Sub Content</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <description>Indicates if this Content Item is currently available</description>
        <inlineHelpText>Indicates if this Content Item is currently available</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>available</fullName>
                </value>
                <value>
                    <fullName>not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Content</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>ADvendio__MaximumApplicability__c</columns>
        <columns>ADvendio__ConstantQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>